force-app/main/default/objects/Request_Type__mdt/Request_Type__mdt.object-meta.xml
<CustomObject>
    <label>Request Type</label>
    <pluralLabel>Request Types</pluralLabel>
</CustomObject>