force-app/main/default/objects/Request_Type__mdt/fields/Category_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Request__c</fullName>
    <label>Category of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AdOps &amp; Campaign Related</fullName>
                <label>AdOps &amp; Campaign-Related</label>
            </value>
            <value>
                <fullName>Dashboard &amp; Report Related</fullName>
                <label>Dashboard &amp; Reporting-Related</label>
            </value>
            <value>
                <fullName>Invoice &amp; Accounting Related</fullName>
                <label>Invoicing-Related</label>
            </value>
            <value>
                <fullName>Product &amp; Integration Related</fullName>
                <label>Product &amp; Integration-Related</label>
            </value>
            <value>
                <fullName>Compliance &amp; Fraud Related</fullName>
                <label>Compliance-Related</label>
            </value>
            <value>
                <fullName>Marketing &amp; Design Related</fullName>
                <label>Marketing-Related</label>
            </value>
            <value>
                <fullName>None of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>