force-app/main/default/objects/Request_Type__mdt/fields/custom_object_Type__c.field-meta.xml
<CustomField>
    <fullName>custom_object_Type__c</fullName>
    <label>custom object type sobjecttype</label>
    <length>200</length>
    <type>Text</type>
</CustomField>