force-app/main/default/objects/Request_Type__mdt/fields/RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeID__c</fullName>
    <label>RecordTypeID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>