force-app/main/default/objects/Request_Type__mdt/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add/Modify Invoicing Recipient(s) List</fullName>
            </value>
            <value>
                <fullName>Add/Modify Client Custom Invoice Process</fullName>
            </value>
            <value>
                <fullName>Submit a Chargeback Claim for Approval by Media</fullName>
            </value>
            <value>
                <fullName>Update a Live Campaign</fullName>
            </value>
            <value>
                <fullName>New Campaign Build Request</fullName>
            </value>
            <value>
                <fullName>New Offer Shell Request</fullName>
            </value>
            <value>
                <fullName>Relaunch a Paused Campaign</fullName>
            </value>
            <value>
                <fullName>Media Mix Modification &amp; Feedback</fullName>
            </value>
            <value>
                <fullName>Tracking Support</fullName>
            </value>
            <value>
                <fullName>Client Spend Reporting Request</fullName>
            </value>
            <value>
                <fullName>New Optimization Dashboard Request</fullName>
            </value>
            <value>
                <fullName>Pause/Reactivate a Dashboard</fullName>
            </value>
            <value>
                <fullName>Modify a Live Dashboard</fullName>
            </value>
            <value>
                <fullName>General Dashboard Support</fullName>
            </value>
            <value>
                <fullName>Transfer an Optimization Dashboard to CSC Team</fullName>
            </value>
            <value>
                <fullName>Creative Report Request</fullName>
            </value>
            <value>
                <fullName>Add/Modify Client Blacklist Request</fullName>
            </value>
            <value>
                <fullName>Compliance Sweep Request</fullName>
            </value>
            <value>
                <fullName>General COP Support</fullName>
            </value>
            <value>
                <fullName>Product &amp; Integration Request</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Creative Modification Request</fullName>
            </value>
            <value>
                <fullName>None of the above - custom request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>