force-app/main/default/objects/Request_Type__mdt/listViews/Request_Type_Meta_Data.listView-meta.xml
<ListView>
    <fullName>Request_Type_Meta_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Category_of_Request__c</columns>
    <columns>Request_Type__c</columns>
    <columns>IsProtected</columns>
    <columns>custom_object_Type__c</columns>
    <columns>RecordTypeID__c</columns>
    <filterScope>Everything</filterScope>
    <label>Request Type Meta Data</label>
</ListView>